# pyadps

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  config.ini  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: about_us.rst  api.rst  conf.py  contact_us.rst  cutbin.rst  demo.000  doc.rst  example.ipynb  index.rst  modules.rst  plotgen.rst  profile_test.rst  pyreadrdi.rst  readrdi.rst  signal_quality.rst  streamlit.rst  usage.rst  velocity_test.rst  writenc.rst
docs/source/.ipynb_checkpoints/: example-checkpoint.ipynb
docs/source/_static/: custom.css
pyadps/: __main__.py  requirements.txt
pyadps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyadps/pages/: 04_Profile_Test.py  __init__.py
pyadps/utils/: fortreadrdi.v0.7.f95  plotgen.py  profile_test.py  pyreadrdi.py  readrdi.py  run.sh  test_readrdi.py  writenc.py
src/: config.ini
src/pyadps/: Home_Page.py
src/pyadps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyadps/pages/: 01_Read_File.py  02_View_Raw_Data.py  03_Download_Raw_File.py  03_QC_Test.py  04_QC_Test.py  04_Sensor_Health.py  05_Profile_Test.py  05_QC_Test.py  06_Profile_Test.py  06_Velocity_Test.py  06_Write_File.py  07_Velocity_Test.py  07_Write_File.py  08_Write_File.py  09_Auto_process.py
tests/: conftest.py  test_fileheader.py  test_pyreadrdi.py  test_readrdi.py
tests/test_data/: ensemble.000  test.000
tests/test_pyreadrdi/: __init__.py  test_datatype.py  test_fileheader.py  test_fixedleader.py  test_io_checksum.py  test_variableleader.py
(+11 files in other folders)
